# coap-te

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  TODO.md  URL.txt  coap-te.hpp  codes.hpp  compile_example.cmake  conanfile.py  error.cpp  error.hpp  esp_idf.cmake  files.cmake  helper.cpp  helper.hpp  list.hpp  main.cpp  message.hpp  mingw64_profile  options.cpp  options.hpp  security.hpp
.github/workflows/: main.yml
debug/: helper.cpp  helper.hpp  output_string.cpp  output_string.hpp  print_message.cpp  print_message.hpp  print_options.cpp  print_options.hpp
docs/: Doxyfile.in  docs.cmake
examples/: arguments.cpp  buffer_ex.cpp  coap_client.cpp  coap_server.cpp  compile_example.cmake  examples.cmake  factory.cpp  message.cpp  no_alloc_message.cpp  option_list_example.cpp  option_table.cpp  serialize_parse.cpp  size_of.cpp
examples/esp32/coap_mesh/: CMakeLists.txt
examples/esp32/engine_server/: CMakeLists.txt
examples/internal/: percent_decode.cpp  percent_encode.cpp  tree.cpp
examples/json/: convert_to_json.cpp
examples/message/: factory.cpp  no_response.cpp  option.cpp  serialize_class.cpp  serialize_class_test.cpp  serialize_parse.cpp  serialize_parse_reliable.cpp  signaling.cpp
examples/observe/: client_observe.cpp  server_observe.cpp  tcp_client_observe.cpp  tcp_server_observe.cpp
examples/port/: async_tcp_client.cpp  endpoint_ipv6.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp  udp_socket.cpp
examples/resource/: discovery.cpp
examples/transmission/: engine_server.cpp  engine_tcp_client.cpp  engine_tcp_server.cpp  raw_engine.cpp  raw_transaction.cpp  request_get_block_wise.cpp  request_put_block_wise.cpp  response_block_wise.cpp
examples/uri/: decompose.cpp
impl/: message_impl.hpp  options_impl.hpp
include/: coap-te-debug.hpp  coap-te.hpp
include/coap-te/: alias.hpp
include/coap-te/buffer/: buffer.hpp  buffer_compare.hpp  buffer_copy.hpp  buffer_range.hpp  buffer_sequence.hpp  buffer_size.hpp  buffers_iterator.hpp  const_buffer.hpp  is_buffer_sequence.hpp  iterator_container.hpp  mutable_buffer.hpp  traits.hpp
include/coap-te/core/: buffer.hpp  buffer_sequence.hpp  byte_order.hpp  const_buffer.hpp  constexpr_string.hpp  error.hpp  expected.hpp  mutable_buffer.hpp  sorted_list.hpp  sorted_no_alloc_list.hpp  to_string.hpp  traits.hpp  utility.hpp
include/coap-te/debug/: error.hpp  to_string.hpp
include/coap-te/message/: code.hpp  config.hpp  message.hpp  parse.hpp  serialize.hpp  token.hpp  traits.hpp
message/: codes.hpp  factory.hpp  message_id.cpp  message_id.hpp  options.cpp  options.hpp  parser.cpp  parser.hpp  serialize.hpp  types.cpp
message/impl/: factory_impl.hpp  options_impl.hpp  parser_impl.hpp  serialize_impl.hpp
old/: files.cmake
old/examples/: arguments.cpp  arguments.hpp  coap_client.cpp  compile_example.cmake
old/examples/esp32/port/udp_socket/main/: CMakeLists.txt  udp_socket.cpp
old/examples/internal/: percent_encode.cpp  tree.cpp
old/examples/json/: convert_to_json.cpp
old/examples/message/: option.cpp  serialize_parse.cpp
old/examples/port/: async_tcp_client.cpp  endpoint_ipv6.cpp  tcp_client.cpp  udp_client.cpp  udp_server.cpp
old/examples/transmission/: engine_tcp_client.cpp  engine_tcp_server.cpp  request_get_block_wise.cpp  request_put_block_wise.cpp  response_block_wise.cpp
old/examples/uri/: decompose.cpp
old/src/: coap-te-debug.hpp  coap-te.hpp
other/: error.cpp  error.hpp  helper.cpp
plugins/embind/: CMakeLists.txt  coap-te.html  coap-te.js  coap-te.wasm  code.cpp  debug.cpp  m.js
src/: cache.hpp  coap-te-debug.hpp  coap-te.hpp  error.cpp  error.hpp  log.hpp  main.cpp
src/coap-te/: error.cpp  error.hpp
src/coap-te/debug/: helper.cpp  output_string.cpp  output_string.hpp  print_message.cpp  print_resource.cpp  print_uri.cpp  print_uri.hpp
src/coap-te/internal/: ascii.hpp  meta.hpp  tree.hpp
src/coap-te/message/: detail.hpp  factory.hpp  message_id.cpp  serialize.cpp  serialize.hpp  types.cpp  types.hpp
src/coap-te/observe/: list_vector.hpp  types.hpp
src/coap-te/port/: c_standard_port.cpp
src/coap-te/resource/: discovery.hpp  node.hpp  resource.hpp  types.hpp
src/coap-te/security/: security.hpp
src/coap-te/transmission/: engine.hpp  functions.cpp  response.hpp  transaction.hpp  transaction_list.hpp  transaction_list_vector.hpp  types.hpp
src/coap-te/uri/: compose.cpp  decompose.cpp  decompose.hpp
src/debug/: helper.cpp  helper.hpp  output_string.cpp  output_string.hpp  output_types.hpp  print_message.cpp  print_message.hpp  print_options.cpp  print_options.hpp  print_resource.cpp  print_resource.hpp  print_uri.cpp  print_uri.hpp
src/debug/impl/: print_options_impl.hpp  print_resource_impl.hpp
src/defines/: connection.hpp  defaults.hpp
src/helper/json/: convert.hpp  util.cpp
src/internal/: ascii.hpp  decoder.cpp  decoder.hpp  encoder.hpp  helper.cpp  helper.hpp  list.hpp  tree.hpp
src/internal/impl/: encoder_impl.hpp
src/message/: codes.cpp  codes.hpp  factory.hpp  message_id.cpp  message_id.hpp  options.cpp  options.hpp  parser.cpp  parser.hpp  serialize.cpp  serialize.hpp  types.cpp  types.hpp
src/message/impl/: factory_impl.hpp  options_impl.hpp  (+2 more)
src/observe/: functions.cpp  functions.hpp  list.hpp  list_vector.hpp  observer.hpp  types.hpp
src/port/: c_standard_port.cpp  port.hpp
src/resource/: discovery.hpp  link_format.cpp  link_format.hpp  node.hpp  resource.hpp  types.hpp
src/transmission/: engine.hpp  functions.cpp  functions.hpp  request.hpp  response.hpp  transaction.hpp  transaction_list.hpp  transaction_list_vector.hpp  types.hpp
src/trasmission/: transmission.hpp
src/uri/: compose.cpp  compose.hpp  decompose.cpp  decompose.hpp  types.hpp
tests/: buffer.cpp  byte_order.cpp  core_traits.cpp  error_code.cpp  list_types.hpp  message_serialize.cpp  message_serialize_parse.cpp  option.cpp  option_list.cpp  option_serialize_parse.cpp  options.cpp  options_definitions.cpp  serialize_option.cpp  sorted_list.cpp  sorted_no_alloc_list.cpp  tests.cmake  utility.cpp
trasmission/: transmission.hpp
(+298 files in other folders)
